# talonbot

./: .gitignore  CMakeLists.txt  kaggle_train.ipynb  kernel-metadata.json  setup.sh
rewards/: DefenseRotationReward.h  DemoDodgeReward.h  KickoffReward.h  PredictiveDefenseReward.h  V4ComboRewards.h  V4GameSenseRewards.h  V4MechanicsRewards.h  V4OutcomeRewards.h  V4PenaltyRewards.h
scripts/: backup.sh  progress.py  run.sh
src/: main.cpp
